fix pg panel gap

--- a/packages/survey-creator-core/src/property-grid-theme/blocks/spg-panel.scss
+++ b/packages/survey-creator-core/src/property-grid-theme/blocks/spg-panel.scss
@@ -57,16 +57,15 @@
   .spg-row {
     width: 100%;
     margin-top: var(--ctr-property-grid-form-gap, calcSize(2));;
-    &:first-of-type {
-      margin-top: 0;
-    }
   }
 
   .spg-row--multiple {
     margin-top: calcSize(1);
   }
 }
-
+.spg-panel__content > .spg-row:first-of-type {
+  margin-top: 0;
+}
 .svc-side-bar--mobile {
   .spg-panel__content {
     padding: 0 calcSize(2) calcSize(5);
